layout/base/nsCSSFrameConstructor.cpp
@@ -6860,7 +6860,7 @@ void nsCSSFrameConstructor::ContentAppended(nsIContent* aFirstNewContent,
 #ifdef DEBUG
   if (gReallyNoisyContentUpdates) {
     printf("nsCSSFrameConstructor::ContentAppended: resulting frame model:\n");
-    parentFrame->List(stdout, 0);
+    parentFrame->List(stdout);
   }
 #endif
 
@@ -6963,7 +6963,7 @@ void nsCSSFrameConstructor::ContentRangeInserted(
         printf(
             "nsCSSFrameConstructor::ContentRangeInserted: resulting frame "
             "model:\n");
-        mRootElementFrame->List(stdout, 0);
+        mRootElementFrame->List(stdout);
       }
 #endif
     }
@@ -7325,7 +7325,7 @@ void nsCSSFrameConstructor::ContentRangeInserted(
     printf(
         "nsCSSFrameConstructor::ContentRangeInserted: resulting frame "
         "model:\n");
-    insertion.mParentFrame->List(stdout, 0);
+    insertion.mParentFrame->List(stdout);
   }
 #endif
 
@@ -7581,7 +7581,7 @@ bool nsCSSFrameConstructor::ContentRemoved(nsIContent* aChild,
       printf("nsCSSFrameConstructor::ContentRemoved: childFrame=");
       nsFrame::ListTag(stdout, childFrame);
       putchar('\n');
-      parentFrame->List(stdout, 0);
+      parentFrame->List(stdout);
     }
 #endif
 
@@ -7652,7 +7652,7 @@ bool nsCSSFrameConstructor::ContentRemoved(nsIContent* aChild,
 #ifdef DEBUG
     if (gReallyNoisyContentUpdates && parentFrame) {
       printf("nsCSSFrameConstructor::ContentRemoved: resulting frame model:\n");
-      parentFrame->List(stdout, 0);
+      parentFrame->List(stdout);
     }
 #endif
   }
